--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -51,10 +51,15 @@ body {
   display: flex;
   flex-direction: column;
   font-family: var(--font-body-medium);
+  color: var(--color-black);
   background-color: var(--color-secondary-light);
   margin: 0;
   padding: 0;
   min-height: 100vh;
+}
+
+.no-scrollbar {
+  overflow-y: hidden;
 }
 
 .full-screen {
@@ -84,6 +89,38 @@ h6 {
 .background-dark {
   color: var(--color-white);
   background-color: var(--color-primary);
+}
+
+/* BARRE DE DEFILEMENT */
+
+* {
+  &::-webkit-scrollbar {
+    width: 13px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: var(--color-secondary);
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: var(--color-primary);
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+    background: var(--color-primary-dark);
+  }
+
+  .modal-update-content {
+    &::-webkit-scrollbar-track {
+      border-top-right-radius: 11px;
+      border-bottom-right-radius: 11px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      border-top-right-radius: 9px;
+      border-bottom-right-radius: 9px;
+    }
+  }
 }
 
 /* FORMULAIRES */
@@ -362,6 +399,7 @@ form {
 /* BOUTONS */
 
 .button {
+  box-sizing: border-box;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -374,7 +412,7 @@ form {
   width: 100%;
   height: 40px;
   border-radius: 10px;
-  padding: 0;
+  padding: 10px;
 
   svg {
     width: 17px;
@@ -512,28 +550,33 @@ form {
 /* MODALES UPDATE */
 
 .modal-update-container {
-  position: fixed;
   z-index: 900;
+  box-sizing: border-box;
+  overflow: auto;
+  position: fixed;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
-  overflow: auto;
-  background-color: rgba(0, 0, 0, 0.8);
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: rgba(0, 0, 0, 0.8);
+  padding: 50px;
 
   .modal-update-content {
-    border-radius: 15px;
-    overflow: hidden;
-    width: 80%;
+    box-sizing: border-box;
+    overflow-y: auto;
+    border-radius: 10px;
+    width: 500px;
     max-width: 500px;
+    max-height: calc(100% - 100px);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 
     .modal-update-header {
       display: flex;
       justify-content: space-between;
+      gap: 2em;
       background-color: var(--color-primary);
       padding: 20px;
 
