--- a/public/assets/css/account.css
+++ b/public/assets/css/account.css
@@ -57,6 +57,7 @@
     text-align: center;
     display: flex;
     flex-direction: column;
+    gap: 1em;
     box-sizing: border-box;
     padding: 20px 30px;
 
@@ -126,6 +127,18 @@
       display: flex;
       flex-direction: column;
       gap: 0.5em;
+    }
+  }
+
+  @media screen and (max-width: 800px) {
+    flex-direction: column;
+
+    .my-account-right {
+      width: 100%;
+
+      .profil-picture {
+        max-width: 250px;
+      }
     }
   }
 }
