--- a/public/assets/css/connected.css
+++ b/public/assets/css/connected.css
@@ -9,6 +9,7 @@ header {
   display: flex;
   justify-content: space-between;
   background-color: var(--color-primary-light);
+  border-bottom: 1px solid var(--color-primary);
   padding: 10px 30px;
   width: 100%;
   height: 70px;
@@ -150,15 +151,26 @@ header {
   flex-grow: 1;
   margin-left: 250px;
   min-height: calc(100% - 70px);
+
+  @media screen and (max-width: 800px) {
+    margin-left: 80px;
+  }
 }
 
 .page-header {
   display: flex;
-  gap: 2em;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1em;
   margin-bottom: 20px;
+
+  @media screen and (max-width: 800px) {
+    flex-direction: column;
+  }
 }
 
 .page-title {
+  box-sizing: border-box;
   display: flex;
   align-items: center;
   gap: 1em;
@@ -172,6 +184,11 @@ header {
     fill: var(--color-primary);
     width: 25px;
     height: auto;
+  }
+
+  @media screen and (max-width: 800px) {
+    width: 100%;
+    justify-content: center;
   }
 }
 
@@ -187,9 +204,53 @@ header {
   padding: 20px;
 }
 
-@media (max-width: 800px) {
-  .pages {
-    margin-left: 80px;
+/* BARRE DE RECHERCHE */
+
+.search-bar {
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+  gap: 0.5em;
+
+  input {
+    box-sizing: border-box;
+    height: 40px;
+    margin: 0;
+    border: 2.5px solid var(--color-primary-light);
+    border-radius: 10px;
+    padding: 10px;
+  }
+
+  .button {
+    width: auto;
+  }
+
+  @media screen and (max-width: 800px) {
+    width: 100%;
+
+    input {
+      width: 100%;
+    }
+  }
+}
+
+.search-result {
+  display: flex;
+  align-items: center;
+  gap: 1em;
+  margin-bottom: 20px;
+
+  p {
+    margin: 0;
+
+    span {
+      font-family: var(--font-body-bold);
+      color: var(--color-primary);
+    }
+  }
+
+  .button {
+    width: auto;
   }
 }
 
@@ -295,6 +356,87 @@ header {
 
     &:hover {
       background-color: var(--color-secondary-dark);
+    }
+  }
+}
+
+/* PAGINATION */
+
+.paging {
+  display: flex;
+  justify-content: center;
+  gap: 0.5em;
+  margin-top: 20px;
+
+  .button {
+    width: auto;
+  }
+}
+
+/* MODALES UPDATE */
+
+.modal-update-container {
+  z-index: 900;
+  box-sizing: border-box;
+  overflow: auto;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.8);
+  padding: 50px;
+
+  .modal-update-content {
+    box-sizing: border-box;
+    overflow-y: auto;
+    border-radius: 10px;
+    width: 500px;
+    max-width: 500px;
+    max-height: calc(100% - 100px);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+
+    .modal-update-header {
+      display: flex;
+      justify-content: space-between;
+      gap: 2em;
+      background-color: var(--color-primary);
+      padding: 20px;
+
+      .modal-update-title {
+        color: var(--color-white);
+      }
+
+      .modal-message-close {
+        fill: var(--color-white);
+        cursor: pointer;
+        margin-left: auto;
+        height: 17px;
+        width: 17px;
+        min-width: 17px;
+      }
+
+      .modal-update-close {
+        fill: var(--color-white);
+        cursor: pointer;
+        margin-left: auto;
+        height: 17px;
+        width: 17px;
+        min-width: 17px;
+      }
+    }
+  }
+
+  .modal-update-body {
+    background-color: var(--color-secondary-light);
+    padding: 20px;
+
+    .modal-update-confirmation {
+      display: flex;
+      gap: 1em;
     }
   }
 }
