commit-avant-pull

--- a/public/assets/css/directory.css
+++ b/public/assets/css/directory.css
@@ -35,7 +35,7 @@
 
 .page-containt {
 
-  /* .cards-container {
+  .cards-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -123,5 +123,5 @@
         }
       }
     }
-  } */
+  }
 }
